Fixed Troika's FB address

--- a/org/troikalearning/troikalearning/templates/layout.html
+++ b/org/troikalearning/troikalearning/templates/layout.html
@@ -1,6 +1,6 @@
 {% macro fb(caller) %}
 <li>
-    <a href="http://www.facebook.com/troikagame" target="_blank">
+    <a href="http://www.facebook.com/troikalearning" target="_blank">
     <img class="tl-logo" src="{{ url_for('static', filename='img/fb.png') }}">
     </img></a>
 </li>
