First somewhat working version of an AngularJS mockup

--- a/frontend/core/src/main/webapp/partials/home.html
+++ b/frontend/core/src/main/webapp/partials/home.html
@@ -1,1 +1,114 @@
-<p>Home</p>
+<div class="span12">
+  <!-- Page Content -->
+  <div class="masthead">
+    <h3>extended mind</h3>
+    <p>
+      <a href="#/about">about</a> | <a href="#/people">people</a> | <a href="#/register">register</a> | <a href="#/login">login</a>
+    </p>
+  </div>
+  <div class="container-fluid">
+    <div class="row-fluid">
+      <div class="span4">
+        <div id="em-verified-accordion" class="accordion">
+          <div class="accoardion-group">
+            <div class="accordion-heading">
+              <div class="accordion-toggle">
+                <a href="#/content#verified"> 
+                  <h5>featured verified content</h5>
+                </a>
+                <h6>most interesting verified content this week</h6>
+              </div>
+            </div>
+            <div class="accordion-body collapse in" id="em-verified-collapse">
+              <div class="accordion-inner">
+                <ul class="em-headers">
+                  <li class="em-header">
+                    <a href="#/people/timo-tiuraniemi/on-philosophy-of-technology">On the philosophy of technology</a>
+                    <br/>
+                    &nbsp;&nbsp;&nbsp;<a href="#/about#verification" title="verified on 2013-02-01 by Lauri Jarvilehto">verified</a> 
+                                      <a href="#/categories#essay">essay</a> by <a href="#">Timo Tiuraniemi</a>
+                    <br/>
+                    &nbsp;&nbsp;&nbsp;<a href="#">technology</a>, <a href="#">philosophy</a>
+                  </li>
+                  <li class="em-header">
+                    <a href="#">Essential Firefox keyboard shortcuts</a>
+                    <br/>
+                    &nbsp;&nbsp;&nbsp;<a href="#/about#verification" title="verified on 2013-02-03 Timo Tiuraniemi">verified</a>
+                                      <a href="#/categories#instruction">instruction</a> by <a href="#">Henri Ylikotila</a>
+                    <br/>
+                    &nbsp;&nbsp;&nbsp;<a href="#">software</a>, <a href="#">shortcut</a>, <a href="#">firefox</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="span4">
+        <div id="em-useful-accordion" class="accordion">
+          <div class="accordion-group">
+            <div class="accordion-heading">
+              <div class="accordion-toggle">
+                <a href="#/content#verified"> 
+                  <h5>most useful content</h5>
+                </a>
+                <h6>content adopted the most this week</h6>
+              </div>
+            </div>
+            <div class="accordion-body" id="em-useful-collapse">
+              <div class="accordion-inner">
+                <ul class="em-headers">
+                  <li class="em-header">
+                    <a href="#">Avocado pasta</a>
+                    <br/>
+                    &nbsp;&nbsp;&nbsp;<a href="#/categories#instruction">instruction</a> by <a href="#">Antti Takalahti</a>
+                    <br/>
+                    &nbsp;&nbsp;&nbsp;<a href="#">recipe</a>, <a href="#">italian cuisine</a>, <a href="#">vegetarian</a>
+                  </li>
+                  <li class="em-header">
+                    <a href="#">Notes on productivity</a>
+                    <br/>
+                    &nbsp;&nbsp;&nbsp;<a href="#/about#verification" title="verified on 2013-02-08 Lauri Jarvilehto">verified</a> 
+                                      <a href="#/categories#essay">essay</a> by <a href="#">Timo Tiuraniemi</a>
+                    <br/>
+                    &nbsp;&nbsp;&nbsp;<a href="#">productivity</a>, <a href="#">gtd</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="span4">
+        <div id="em-recommended-accordion" class="accordion">
+          <div class="accordion-group">
+            <div class="accordion-heading">
+              <div class="accordion-toggle">
+                <a href="#/content#recommended"> 
+                  <h5>most recommended content</h5>
+                </a>
+                <h6>content recommended the most this week</h6>
+              </div>
+            </div>
+            <div class="accordion-body" id="em-popular-collapse">
+              <div class="accordion-inner">
+                <ul class="em-headers">
+                  <li class="em-header">
+                    <a href="#">Why it's great to be a nerd</a>
+                    <br/>
+                    &nbsp;&nbsp;&nbsp;<a href="#">Lauri J&auml;rvilehto</a>
+                  </li>
+                  <li class="em-header">
+                    <a href="#">How to break out of Facebook</a>
+                    <br/>
+                    &nbsp;&nbsp;&nbsp;<a href="#/categories#instruction">instruction</a> by <a href="#">Timo Tiuraniemi</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
