--- a/frontend/core/src/main/webapp/less/em.less
+++ b/frontend/core/src/main/webapp/less/em.less
@@ -1,30 +1,26 @@
-/* app css stylesheet */
-
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+a, .em-subtitle {
+  color: gray;
+}
+.accordion-group {
+  border: 0 none;
+}
+.masthead {
+  padding-bottom: 50px;
+  padding-top: 140px;
+  text-align: center;
+}
+.em-note, .em-core {
+  padding-top: 80px;
+}
+ul.em-headers {
+  list-style-image: none;
+  list-style-type: none;
+  margin-left: 0;
+}
+li.em-header {
+  padding-bottom: 20px;
 }
 
-.menu:before {
-  content: "[";
-}
-
-.menu:after {
-  content: "]";
-}
-
-.menu > li {
-  display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+.em-anchor {
+  padding-top: 30px;
 }
