--- a/frontend/core/src/main/webapp/partials/people.html
+++ b/frontend/core/src/main/webapp/partials/people.html
@@ -7,7 +7,7 @@
     <div class="span8">
       <section id="contributors" class="em-anchor">
         <div class="page-header">
-          <h5>Top contributors</h5>
+          <h5>top contributors</h5>
         </div>
         <p>
           <ol>
@@ -32,7 +32,7 @@
       </section>
       <section id="supervisors" class="em-anchor">
         <div class="page-header">
-          <h5>Cag supervisors</h5>
+          <h5>cag supervisors</h5>
         </div>
         <p>
           <ul>
