--- a/frontend/core/src/main/webapp/partials/about.html
+++ b/frontend/core/src/main/webapp/partials/about.html
@@ -15,7 +15,7 @@
         </p>
         <p>
           Today <a href="http://www.wikipedia.org" target="_blank">Wikipedia</a> is the obvious place where open knowledge creation happens, but Wikipedia
-          allowes only anonymous encyclopedic knowledge. If a given piece of knowledge does not
+          allows only anonymous encyclopedic knowledge. If a given piece of knowledge does not
           fit the format provided by Wikipedia &ndash; the knowledge is for example valued, personal or
           does not fit under one encyclopedic heading &ndash; there are currently two valid alternatives:
           a scientific journal or a blog. However where scientific peer review can often takes months of
@@ -59,11 +59,13 @@
           <h5>How does verification work?</h5>
         </div>
         <p>
-          If the user wants to submit her work as a part of the shared extended mind, she can simply click
-          on the keywords under which she wants her note to be peer reviewed. The people who supervise the given
-          keywords get a notification of a new submitted note to their verification queue, and can then either accept
-          or reject the note. Extended mind users can also recommend any public note they read to other users,
-          which ensures that the peer review process can never stop quality content from spreading.
+          If the user wants to submit her work as a part of the shared extended mind, she can first select a 
+          category and a list of public keywords for her note, and then with one click submit her note for 
+          verification. The people who supervise the first, most important keyword get a notification of a 
+          new submitted note to their verification queue, and can then either accept or reject the note. 
+          Extended mind users can also adopt other people's public notes as part of their own notebook, or 
+          recommend any public note they read to other users, which ensures that the peer review process can 
+          never stop quality content from spreading.
         </p>
       </section>
 
