Improved category descriptions

--- a/frontend/core/src/main/webapp/partials/my.html
+++ b/frontend/core/src/main/webapp/partials/my.html
@@ -6,8 +6,7 @@
       <a href="#/my/tasks">notes</a> | 
       <a href="#/notes">tasks</a> | 
       <a href="#/email">email</a> | 
-      <a href="#/learn">learn</a> |
-      <a href="#/logout">logout</a>
+      <a href="#/account">account</a>
     </p>
   </div>
 </div>
