--- a/frontend/core/src/main/webapp/partials/categories.html
+++ b/frontend/core/src/main/webapp/partials/categories.html
@@ -5,73 +5,76 @@
   </div>
   <div class="row-fluid">
     <div class="span8">
-      <section id="impression" class="em-anchor">
+      <section id="introduction" class="em-anchor">
         <div class="page-header">
-          <h5>impression</h5>
+          <h5>introduction</h5>
         </div>
         <p>
-          An impression is a text with which a person shares her thoughts on a
-          specific matter. A note in the impression category has the lightest peer review
-          standards.
+          Categories are needed to differentiate requirements for different
+          types of text. When you want to submit your work for verification,
+          you have to specify a category for your text. Depending on which
+          category you choose, the supervisor will apply different requirements 
+          for the quality and format of the text. 
         </p>
       </section>
-      <section id="instruction" class="em-anchor">
+      <section id="category-types" class="em-anchor">
         <div class="page-header">
-          <h5>instruction</h5>
+          <h5>category types</h5>
         </div>
-        <p>
-          An instruction is a helpful text which specifies the steps to accomplish.
-          Examples of instructions are "howto" posts and recipies.
-        </p>
-      </section>
-      <section id="opinion" class="em-anchor">
-        <div class="page-header">
-          <h5>opinion piece</h5>
+        <div class="em-subsection" id="impression">
+          <h6>impression</h6>
+          <p>
+            An impression is a text with which a person shares her thoughts on a
+            specific matter. A note in the impression category has the lightest peer review
+            standards.
+          </p>
         </div>
-        <p>
-          A note in the opinion piece category contains some partial view on a given subject
-          matter. The text must contain good reasoning.
-        </p>
-      </section>
-      <section id="review" class="em-anchor">
-        <div class="page-header">
-          <h5>review</h5>
+        <div class="em-subsection" id="instruction">
+          <h6>instruction</h6>
+          <p>
+            An instruction is a helpful text which specifies the steps to accomplish a task.
+            Examples of instructions are "how to" posts and recipies.
+          </p>
         </div>
-        <p>
-          A <a href="http://en.wikipedia.org/wiki/Review" target="_blank">review</a> is an 
-          evaluation of a work. A review must follow good reasoning and contain insightful
-          remarks and knowledge on the subject matter.
-        </p>
-      </section>
-      <section id="essay" class="em-anchor">
-        <div class="page-header">
-          <h5>essay</h5>
+        <div class="em-subsection" id="opinion">
+          <h6>opinion piece</h6>
+          <p>
+            A note in the opinion piece category contains some partial view on a given subject
+            matter. The text must contain good reasoning.
+          </p>
         </div>
-        <p>
-          An <a href="http://en.wikipedia.org/wiki/Essay">essay</a> is a lengthy systematic discourse
-          on a specific subject matter.
-        </p>
-      </section>
-      <section id="term-paper" class="em-anchor">
-        <div class="page-header">
-          <h5>term paper</h5>
+        <div class="em-subsection" id="review">
+          <h6>review</h6>
+          <p>
+            A <a href="http://en.wikipedia.org/wiki/Review" target="_blank">review</a> is an 
+            evaluation of a work. A review must follow good reasoning and contain insightful
+            remarks and knowledge on the subject matter.
+          </p>
         </div>
-        <p>
-          The <a href="http://en.wikipedia.org/wiki/Term_paper" target="_blank">term paper</a> 
-          category is for argumentative studies that make thorough academic references. 
-        </p>
-      </section>
-      <section id="academic-paper" class="em-anchor">
-        <div class="page-header">
-          <h5>academic paper</h5>
+        <div class="em-subsection" id="essay">
+          <h6>essay</h6>
+          <p>
+            An <a href="http://en.wikipedia.org/wiki/Essay">essay</a> is a lengthy systematic discourse
+            on a specific subject matter.
+          </p>
         </div>
-        <p>
-          The most rigorous category of is the 
-          <a href="http://en.wikipedia.org/wiki/Academic_paper#Scholarly_paper" target="_blank">academic paper</a>. 
-          An academic paper follows the norms of the scientific review process.
-          Only selected cags with the most scientifically accomplished supervisors have support 
-          for academic papers. 
-        </p>
+        <div class="em-subsection" id="term-paper">
+          <h6>term paper</h6>
+          <p>
+            The <a href="http://en.wikipedia.org/wiki/Term_paper" target="_blank">term paper</a> 
+            category is for argumentative studies that make thorough academic references. 
+          </p>
+        </div>
+        <div class="em-subsection" id="academic-paper">
+          <h6>academic paper</h6>
+          <p>
+            The most rigorous category of is the 
+            <a href="http://en.wikipedia.org/wiki/Academic_paper#Scholarly_paper" target="_blank">academic paper</a>. 
+            An academic paper follows the norms of the scientific review process.
+            Only selected cags with the most scientifically accomplished supervisors have support 
+            for academic papers. 
+          </p>
+        </div>
       </section>
     </div>
   </div>
