First pieces of person page

--- a/frontend/core/src/main/webapp/partials/home.html
+++ b/frontend/core/src/main/webapp/partials/home.html
@@ -26,7 +26,7 @@
                     <a href="#/people/timo-tiuraniemi/on-philosophy-of-technology">On the philosophy of technology</a>
                     <br/>
                     &nbsp;&nbsp;&nbsp;<a href="#/about#verification" title="verified on 2013-02-01 by Lauri Jarvilehto">verified</a> 
-                                      <a href="#/categories#essay">essay</a> by <a href="#">Timo Tiuraniemi</a>
+                                      <a href="#/categories#essay">essay</a> by <a href="#/people/timo-tiuraniemi">Timo Tiuraniemi</a>
                     <br/>
                     &nbsp;&nbsp;&nbsp;<a href="#">technology</a>, <a href="#">philosophy</a>
                   </li>
