Second version of mockup

--- a/frontend/core/src/main/webapp/partials/home.html
+++ b/frontend/core/src/main/webapp/partials/home.html
@@ -3,7 +3,7 @@
   <div class="masthead">
     <h3>extended mind</h3>
     <p>
-      <a href="#/about">about</a> | <a href="#/people">people</a> | <a href="#/register">register</a> | <a href="#/login">login</a>
+      <a href="#/about">about</a> | <a href="#/people">people</a> | <a href="#/search">search</a> | <a href="#/login">login</a>
     </p>
   </div>
   <div class="container-fluid">
@@ -28,15 +28,15 @@
                     &nbsp;&nbsp;&nbsp;<a href="#/about#verification" title="verified on 2013-02-01 by Lauri Jarvilehto">verified</a> 
                                       <a href="#/categories#essay">essay</a> by <a href="#/people/timo-tiuraniemi">Timo Tiuraniemi</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#">technology</a>, <a href="#">philosophy</a>
+                    &nbsp;&nbsp;&nbsp;<a href="#/search/technology">technology</a>, <a href="#/search/philosophy">philosophy</a>
                   </li>
                   <li class="em-header">
-                    <a href="#">Essential Firefox keyboard shortcuts</a>
+                    <a href="#/people/henri-ylikotila/essential-firefox-keyboard-shortcuts">Essential Firefox keyboard shortcuts</a>
                     <br/>
                     &nbsp;&nbsp;&nbsp;<a href="#/about#verification" title="verified on 2013-02-03 Timo Tiuraniemi">verified</a>
-                                      <a href="#/categories#instruction">instruction</a> by <a href="#">Henri Ylikotila</a>
+                                      <a href="#/categories#instruction">instruction</a> by <a href="#/people/henri-ylikotila">Henri Ylikotila</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#">software</a>, <a href="#">shortcut</a>, <a href="#">firefox</a>
+                    &nbsp;&nbsp;&nbsp;<a href="#/search/software">software</a>, <a href="#/search/shortcut">shortcut</a>, <a href="#/search/firefox">firefox</a>
                   </li>
                 </ul>
               </div>
@@ -59,19 +59,19 @@
               <div class="accordion-inner">
                 <ul class="em-headers">
                   <li class="em-header">
-                    <a href="#">Avocado pasta</a>
+                    <a href="#/people/antti-takalahti/avocado-pasta">Avocado pasta</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#/categories#instruction">instruction</a> by <a href="#">Antti Takalahti</a>
+                    &nbsp;&nbsp;&nbsp;<a href="#/categories#instruction">instruction</a> by <a href="#/people/antti-takalahti">Antti Takalahti</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#">recipe</a>, <a href="#">italian cuisine</a>, <a href="#">vegetarian</a>
+                    &nbsp;&nbsp;&nbsp;<a href="#/search/recipe">recipe</a>, <a href="#/search/italian-cuisine">italian cuisine</a>, <a href="#/search/vegetarian">vegetarian</a>
                   </li>
                   <li class="em-header">
-                    <a href="#">Notes on productivity</a>
+                    <a href="#/people/timo-tiuraniemi/notes-on-productivity">Notes on productivity</a>
                     <br/>
                     &nbsp;&nbsp;&nbsp;<a href="#/about#verification" title="verified on 2013-02-08 Lauri Jarvilehto">verified</a> 
-                                      <a href="#/categories#essay">essay</a> by <a href="#">Timo Tiuraniemi</a>
+                                      <a href="#/categories#essay">essay</a> by <a href="#/people/timo-tiuraniemi">Timo Tiuraniemi</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#">productivity</a>, <a href="#">gtd</a>
+                    &nbsp;&nbsp;&nbsp;<a href="#/search/productivity">productivity</a>, <a href="#/search/gtd">gtd</a>
                   </li>
                 </ul>
               </div>
@@ -94,14 +94,14 @@
               <div class="accordion-inner">
                 <ul class="em-headers">
                   <li class="em-header">
-                    <a href="#">Why it's great to be a nerd</a>
+                    <a href="#/people/lauri-jarvilehto/why-its-great-to-be-a-nerd">Why it's great to be a nerd</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#">Lauri J&auml;rvilehto</a>
+                    &nbsp;&nbsp;&nbsp;<a href="#/people/lauri-jarvilehto">Lauri J&auml;rvilehto</a>
                   </li>
                   <li class="em-header">
-                    <a href="#">How to break out of Facebook</a>
+                    <a href="#/people/timo-tiuraniemi/how-to-break-out-of-facebook">How to break out of Facebook</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#/categories#instruction">instruction</a> by <a href="#">Timo Tiuraniemi</a>
+                    &nbsp;&nbsp;&nbsp;<a href="#/categories#instruction">instruction</a> by <a href="#/people/timo-tiuraniemi">Timo Tiuraniemi</a>
                   </li>
                 </ul>
               </div>
