--- a/frontend/core/src/main/webapp/partials/login.html
+++ b/frontend/core/src/main/webapp/partials/login.html
@@ -4,15 +4,17 @@
     <h3>extended mind <a href="#/" class="em-subtitle">login</a></h3>
     <p>&nbsp;</p>
     <p>
-      <form name="form">
+      <form name="login">
         <dl>
           <dt>
             <label for="login-email">email address</label>
-            <input id="login-email" type="email" value="" name="login-email" ng-model="email">
+            <!-- TODO: add attribute ng-model="email" -->
+            <input id="login-email" type="email" value="test@extendedmind.org" name="login-email"/>
           </dt>
           <dt>
             <label for="login-password">password</label>
-            <input id="login-password" type="password" value="" name="login-password" ng-model="password">
+            <!-- TODO: add attribute ng-model="password" -->
+            <input id="login-password" type="password" value="test" name="login-password"/>
           </dt>
           <dt>
             <a href="#/my" class="btn">login</a>
