Point cag links to search page

--- a/frontend/core/src/main/webapp/partials/people.html
+++ b/frontend/core/src/main/webapp/partials/people.html
@@ -37,15 +37,15 @@
         <p>
           <ul>
             <li>
-              <a href="#/cags/technology">technology</a> (8 verified notes)<br/>
+              <a href="#/search/technology">technology</a> (8 verified notes)<br/>
               &nbsp;&nbsp;&nbsp;<a href="#/people/timo-tiuraniemi">Timo Tiuraniemi</a>
             </li>
             <li>
-              <a href="#/cags/philosophy">philosophy</a> (5 verified notes)<br/>
+              <a href="#/search/philosophy">philosophy</a> (5 verified notes)<br/>
               &nbsp;&nbsp;&nbsp;<a href="#/people/lauri-jarvilehto">Lauri J&auml;rvilehto</a>
             </li>
             <li>
-              <a href="#/cags/philosophy">sports</a> (2 verified notes)<br/>
+              <a href="#/search/sports">sports</a> (2 verified notes)<br/>
               &nbsp;&nbsp;&nbsp;<a href="#/people/antti-takalahti">Antti Takalahti</a>
             </li>
           </ul>
