Fine tuned layout

--- a/frontend/core/src/main/webapp/partials/test/firefox.html
+++ b/frontend/core/src/main/webapp/partials/test/firefox.html
@@ -33,6 +33,7 @@
        vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
        <p>&nbsp;</p>
        <p><a href="#/">extended mind</a> | <a href="#/people/henri-ylikotila">author</a> | <a href="#/">share</a></p>
+       <p>&nbsp;</p>
     </div>
   </div>
 </div>
