--- a/frontend/core/src/main/webapp/partials/test/nerd.html
+++ b/frontend/core/src/main/webapp/partials/test/nerd.html
@@ -68,6 +68,7 @@
       <p>It's great to be a nerd.</p>     
        <p>&nbsp;</p>
        <p><a href="#/">extended mind</a> | <a href="#/people/lauri-jarvilehto">author</a> | <a href="#/">share</a></p>
+       <p>&nbsp;</p>
     </div>
   </div>
 </div>
