--- a/frontend/core/src/main/webapp/partials/test/pasta.html
+++ b/frontend/core/src/main/webapp/partials/test/pasta.html
@@ -30,6 +30,7 @@
       <p>Toss with warm pasta and serve warm or chilled.</p>
        <p>&nbsp;</p>
        <p><a href="#/">extended mind</a> | <a href="#/people/antti-takalahti">author</a> | <a href="#/">share</a></p>
+       <p>&nbsp;</p>
     </div>
   </div>
 </div>
