--- a/frontend/core/src/main/webapp/partials/test/productivity.html
+++ b/frontend/core/src/main/webapp/partials/test/productivity.html
@@ -42,6 +42,7 @@
        vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
        <p>&nbsp;</p>
        <p><a href="#/">extended mind</a> | <a href="#/people/timo-tiuraniemi">author</a> | <a href="#/">share</a></p>
+       <p>&nbsp;</p>
     </div>
   </div>
 </div>
