Removed broken links from front page

--- a/frontend/core/src/main/webapp/partials/home.html
+++ b/frontend/core/src/main/webapp/partials/home.html
@@ -13,7 +13,7 @@
           <div class="accoardion-group">
             <div class="accordion-heading">
               <div class="accordion-toggle">
-                <a href="#/content#verified"> 
+                <a href=""> 
                   <h5>featured verified content</h5>
                 </a>
                 <h6>most interesting verified content this week</h6>
@@ -49,7 +49,7 @@
           <div class="accordion-group">
             <div class="accordion-heading">
               <div class="accordion-toggle">
-                <a href="#/content#verified"> 
+                <a href=""> 
                   <h5>most useful content</h5>
                 </a>
                 <h6>content adopted the most this week</h6>
@@ -84,7 +84,7 @@
           <div class="accordion-group">
             <div class="accordion-heading">
               <div class="accordion-toggle">
-                <a href="#/content#recommended"> 
+                <a href=""> 
                   <h5>most recommended content</h5>
                 </a>
                 <h6>content recommended the most this week</h6>
