--- a/frontend/core/src/main/webapp/partials/my.html
+++ b/frontend/core/src/main/webapp/partials/my.html
@@ -3,10 +3,10 @@
   <div class="masthead">
     <h3>my extended mind</h3>
     <p>
-      <a href="#/my/tasks">notes</a> | 
-      <a href="#/notes">tasks</a> | 
-      <a href="#/email">email</a> | 
-      <a href="#/account">account</a>
+      <a href="#/my/notes">notes</a> | 
+      <a href="#/my/tasks">tasks</a> | 
+      <a href="#/my/email">email</a> | 
+      <a href="#/my/account">account</a>
     </p>
   </div>
 </div>
