Added links from screenshots back to my extended mind

--- a/frontend/core/src/main/webapp/partials/email.html
+++ b/frontend/core/src/main/webapp/partials/email.html
@@ -1,6 +1,6 @@
 <div class="span12">
   <!-- Page Content -->
   <p>
-    <img src="partials/test/email.png"/>
+    <a href="#/my"><img src="partials/test/email.png"/></a>
   </p>
 </div>
