--- a/frontend/core/src/main/webapp/partials/notes.html
+++ b/frontend/core/src/main/webapp/partials/notes.html
@@ -1,5 +1,5 @@
 <div class="span12">
   <p>
-    <img src="partials/test/notes.png"/>
+    <a href="#/my"><img src="partials/test/notes.png"/></a>
   </p>
 </div>
