--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -5,6 +5,7 @@
     <p>
       <a href="#/my/notes">notes</a> |
       <a href="#/my/tasks">tasks</a> |
+      <a href="#/my/email">email</a> |
       <a href="#/my/account">account</a>
     </p>
   </div>
