Set html5mode to true. Requires nginx.conf rewrite to work.

--- a/frontend/core/src/main/webapp/static/partials/about.html
+++ b/frontend/core/src/main/webapp/static/partials/about.html
@@ -1,7 +1,7 @@
 <div class="span12">
   <!-- Page Content -->
   <div class="em-core">
-    <h3>extended mind <a href="#/" class="em-subtitle">about</a></h3>
+    <h3>extended mind <a href="/" class="em-subtitle">about</a></h3>
   </div>
   <div class="row-fluid">
     <div class="span8">
@@ -59,12 +59,12 @@
           <h5>How does verification work?</h5>
         </div>
         <p>
-          If the user wants to submit her work as a part of the shared extended mind, she can first select a 
-          category and a list of public keywords for her note, and then with one click submit her note for 
-          verification. The people who supervise the first, most important keyword get a notification of a 
-          new submitted note to their verification queue, and can then either accept or reject the note. 
-          Extended mind users can also adopt other people's public notes as part of their own notebook, or 
-          recommend any public note they read to other users, which ensures that the peer review process can 
+          If the user wants to submit her work as a part of the shared extended mind, she can first select a
+          category and a list of public keywords for her note, and then with one click submit her note for
+          verification. The people who supervise the first, most important keyword get a notification of a
+          new submitted note to their verification queue, and can then either accept or reject the note.
+          Extended mind users can also adopt other people's public notes as part of their own notebook, or
+          recommend any public note they read to other users, which ensures that the peer review process can
           never stop quality content from spreading.
         </p>
       </section>
