--- a/frontend/core/src/main/webapp/static/partials/categories.html
+++ b/frontend/core/src/main/webapp/static/partials/categories.html
@@ -1,7 +1,7 @@
 <div class="span12">
   <!-- Page Content -->
   <div class="em-core">
-    <h3>extended mind <a href="#/" class="em-subtitle">categories</a></h3>
+    <h3>extended mind <a href="/" class="em-subtitle">categories</a></h3>
   </div>
   <div class="row-fluid">
     <div class="span8">
@@ -13,8 +13,8 @@
           Categories are needed to differentiate requirements for different
           types of text. When you want to submit your work for verification,
           you have to specify a category for your text. Depending on which
-          category you choose, the supervisor will apply different requirements 
-          for the quality and format of the text. 
+          category you choose, the supervisor will apply different requirements
+          for the quality and format of the text.
         </p>
       </section>
       <section id="category-types" class="em-anchor">
@@ -46,7 +46,7 @@
         <div class="em-subsection" id="review">
           <h6>review</h6>
           <p>
-            A <a href="http://en.wikipedia.org/wiki/Review" target="_blank">review</a> is an 
+            A <a href="http://en.wikipedia.org/wiki/Review" target="_blank">review</a> is an
             evaluation of a work. A review must follow good reasoning and contain insightful
             remarks and knowledge on the subject matter.
           </p>
@@ -61,18 +61,18 @@
         <div class="em-subsection" id="term-paper">
           <h6>term paper</h6>
           <p>
-            The <a href="http://en.wikipedia.org/wiki/Term_paper" target="_blank">term paper</a> 
-            category is for argumentative studies that make thorough academic references. 
+            The <a href="http://en.wikipedia.org/wiki/Term_paper" target="_blank">term paper</a>
+            category is for argumentative studies that make thorough academic references.
           </p>
         </div>
         <div class="em-subsection" id="academic-paper">
           <h6>academic paper</h6>
           <p>
-            The most rigorous category of is the 
-            <a href="http://en.wikipedia.org/wiki/Academic_paper#Scholarly_paper" target="_blank">academic paper</a>. 
+            The most rigorous category of is the
+            <a href="http://en.wikipedia.org/wiki/Academic_paper#Scholarly_paper" target="_blank">academic paper</a>.
             An academic paper follows the norms of the scientific review process.
-            Only selected cags with the most scientifically accomplished supervisors have support 
-            for academic papers. 
+            Only selected cags with the most scientifically accomplished supervisors have support
+            for academic papers.
           </p>
         </div>
       </section>
