--- a/frontend/core/src/main/webapp/static/partials/email.html
+++ b/frontend/core/src/main/webapp/static/partials/email.html
@@ -1,6 +1,6 @@
 <div class="span12">
   <!-- Page Content -->
   <p>
-    <a href="#/my"><img src="static/partials/test/email.png"/></a>
+    <a href="/my"><img src="/static/partials/test/email.png"/></a>
   </p>
 </div>
