--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -1,7 +1,7 @@
 <div class="span12">
   <!-- Page Content -->
   <div class="em-core">
-    <h3>extended mind <a href="#/" class="em-subtitle">login</a></h3>
+    <h3>extended mind <a href="/" class="em-subtitle">login</a></h3>
     <p>&nbsp;</p>
     <p>
       <form name="login">
@@ -17,7 +17,7 @@
             <input id="login-password" type="password" value="test" name="login-password"/>
           </dt>
           <dt>
-            <a href="#/my" class="btn">login</a>
+            <a href="/my" class="btn">login</a>
           </dt>
         </dl>
       </form>
