--- a/frontend/core/src/main/webapp/static/partials/home.html
+++ b/frontend/core/src/main/webapp/static/partials/home.html
@@ -3,7 +3,7 @@
   <div class="masthead">
     <h3>extended mind</h3>
     <p>
-      <a href="#/about">about</a> | <a href="#/people">people</a> | <a href="#/search">search</a> | <a href="#/login">login</a>
+      <a href="/about">about</a> | <a href="/people">people</a> | <a href="/search">search</a> | <a href="/login">login</a>
     </p>
   </div>
   <div class="container-fluid">
@@ -13,7 +13,7 @@
           <div class="accoardion-group">
             <div class="accordion-heading">
               <div class="accordion-toggle">
-                <a href=""> 
+                <a href="">
                   <h5>featured verified content</h5>
                 </a>
                 <h6>most interesting verified content this week</h6>
@@ -23,20 +23,20 @@
               <div class="accordion-inner">
                 <ul class="em-headers">
                   <li class="em-header">
-                    <a href="#/people/timo-tiuraniemi/on-philosophy-of-technology">On the philosophy of technology</a>
+                    <a href="/people/timo-tiuraniemi/on-philosophy-of-technology">On the philosophy of technology</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#/about#verification" title="verified on 2013-02-01 by Lauri Jarvilehto">verified</a> 
-                                      <a href="#/categories#essay">essay</a> by <a href="#/people/timo-tiuraniemi">Timo Tiuraniemi</a>
+                    &nbsp;&nbsp;&nbsp;<a href="/about#verification" title="verified on 2013-02-01 by Lauri Jarvilehto">verified</a>
+                                      <a href="/categories#essay">essay</a> by <a href="/people/timo-tiuraniemi">Timo Tiuraniemi</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#/search/technology">technology</a>, <a href="#/search/philosophy">philosophy</a>
+                    &nbsp;&nbsp;&nbsp;<a href="/search/technology">technology</a>, <a href="/search/philosophy">philosophy</a>
                   </li>
                   <li class="em-header">
-                    <a href="#/people/henri-ylikotila/essential-firefox-keyboard-shortcuts">Essential Firefox keyboard shortcuts</a>
+                    <a href="/people/henri-ylikotila/essential-firefox-keyboard-shortcuts">Essential Firefox keyboard shortcuts</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#/about#verification" title="verified on 2013-02-03 Timo Tiuraniemi">verified</a>
-                                      <a href="#/categories#instruction">instruction</a> by <a href="#/people/henri-ylikotila">Henri Ylikotila</a>
+                    &nbsp;&nbsp;&nbsp;<a href="/about#verification" title="verified on 2013-02-03 Timo Tiuraniemi">verified</a>
+                                      <a href="/categories#instruction">instruction</a> by <a href="/people/henri-ylikotila">Henri Ylikotila</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#/search/software">software</a>, <a href="#/search/shortcut">shortcut</a>, <a href="#/search/firefox">firefox</a>
+                    &nbsp;&nbsp;&nbsp;<a href="/search/software">software</a>, <a href="/search/shortcut">shortcut</a>, <a href="/search/firefox">firefox</a>
                   </li>
                 </ul>
               </div>
@@ -49,7 +49,7 @@
           <div class="accordion-group">
             <div class="accordion-heading">
               <div class="accordion-toggle">
-                <a href=""> 
+                <a href="">
                   <h5>most useful content</h5>
                 </a>
                 <h6>content adopted the most this week</h6>
@@ -59,19 +59,19 @@
               <div class="accordion-inner">
                 <ul class="em-headers">
                   <li class="em-header">
-                    <a href="#/people/antti-takalahti/avocado-pasta">Avocado pasta</a>
+                    <a href="/people/antti-takalahti/avocado-pasta">Avocado pasta</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#/categories#instruction">instruction</a> by <a href="#/people/antti-takalahti">Antti Takalahti</a>
+                    &nbsp;&nbsp;&nbsp;<a href="/categories#instruction">instruction</a> by <a href="/people/antti-takalahti">Antti Takalahti</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#/search/recipe">recipe</a>, <a href="#/search/italian-cuisine">italian cuisine</a>, <a href="#/search/vegetarian">vegetarian</a>
+                    &nbsp;&nbsp;&nbsp;<a href="/search/recipe">recipe</a>, <a href="/search/italian-cuisine">italian cuisine</a>, <a href="/search/vegetarian">vegetarian</a>
                   </li>
                   <li class="em-header">
-                    <a href="#/people/timo-tiuraniemi/notes-on-productivity">Notes on productivity</a>
+                    <a href="/people/timo-tiuraniemi/notes-on-productivity">Notes on productivity</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#/about#verification" title="verified on 2013-02-08 Lauri Jarvilehto">verified</a> 
-                                      <a href="#/categories#essay">essay</a> by <a href="#/people/timo-tiuraniemi">Timo Tiuraniemi</a>
+                    &nbsp;&nbsp;&nbsp;<a href="/about#verification" title="verified on 2013-02-08 Lauri Jarvilehto">verified</a>
+                                      <a href="/categories#essay">essay</a> by <a href="/people/timo-tiuraniemi">Timo Tiuraniemi</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#/search/productivity">productivity</a>, <a href="#/search/gtd">gtd</a>
+                    &nbsp;&nbsp;&nbsp;<a href="/search/productivity">productivity</a>, <a href="/search/gtd">gtd</a>
                   </li>
                 </ul>
               </div>
@@ -84,7 +84,7 @@
           <div class="accordion-group">
             <div class="accordion-heading">
               <div class="accordion-toggle">
-                <a href=""> 
+                <a href="">
                   <h5>most recommended content</h5>
                 </a>
                 <h6>content recommended the most this week</h6>
@@ -94,14 +94,14 @@
               <div class="accordion-inner">
                 <ul class="em-headers">
                   <li class="em-header">
-                    <a href="#/people/lauri-jarvilehto/why-its-great-to-be-a-nerd">Why it's great to be a nerd</a>
+                    <a href="/people/lauri-jarvilehto/why-its-great-to-be-a-nerd">Why it's great to be a nerd</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#/people/lauri-jarvilehto">Lauri J&auml;rvilehto</a>
+                    &nbsp;&nbsp;&nbsp;<a href="/people/lauri-jarvilehto">Lauri J&auml;rvilehto</a>
                   </li>
                   <li class="em-header">
-                    <a href="#/people/timo-tiuraniemi/how-to-break-out-of-facebook">How to break out of Facebook</a>
+                    <a href="/people/timo-tiuraniemi/how-to-break-out-of-facebook">How to break out of Facebook</a>
                     <br/>
-                    &nbsp;&nbsp;&nbsp;<a href="#/categories#instruction">instruction</a> by <a href="#/people/timo-tiuraniemi">Timo Tiuraniemi</a>
+                    &nbsp;&nbsp;&nbsp;<a href="/categories#instruction">instruction</a> by <a href="/people/timo-tiuraniemi">Timo Tiuraniemi</a>
                   </li>
                 </ul>
               </div>
