--- a/frontend/core/src/main/webapp/static/partials/people.html
+++ b/frontend/core/src/main/webapp/static/partials/people.html
@@ -1,7 +1,7 @@
 <div class="span12">
   <!-- Page Content -->
   <div class="em-core">
-    <h3>extended mind <a href="#/" class="em-subtitle">people</a></h3>
+    <h3>extended mind <a href="/" class="em-subtitle">people</a></h3>
   </div>
   <div class="row-fluid">
     <div class="span8">
@@ -12,19 +12,19 @@
         <p>
           <ol>
             <li>
-              <a href="#/people/timo-tiuraniemi">Timo Tiuraniemi</a><br/>
+              <a href="/people/timo-tiuraniemi">Timo Tiuraniemi</a><br/>
               &nbsp;&nbsp;&nbsp;15 verified notes
             </li>
             <li>
-              <a href="#/people/lauri-jarvilehto">Lauri J&auml;rvilehto</a><br/>
+              <a href="/people/lauri-jarvilehto">Lauri J&auml;rvilehto</a><br/>
               &nbsp;&nbsp;&nbsp;10 verified notes
             </li>
             <li>
-              <a href="#/people/antti-takalahti">Antti Takalahti</a><br/>
+              <a href="/people/antti-takalahti">Antti Takalahti</a><br/>
               &nbsp;&nbsp;&nbsp;4 verified notes
             </li>
             <li>
-              <a href="#/people/henri-ylikotila">Henri Ylikotila</a><br/>
+              <a href="/people/henri-ylikotila">Henri Ylikotila</a><br/>
               &nbsp;&nbsp;&nbsp;2 verified notes
             </li>
           </ol>
@@ -37,16 +37,16 @@
         <p>
           <ul>
             <li>
-              <a href="#/search/technology">technology</a> (8 verified notes)<br/>
-              &nbsp;&nbsp;&nbsp;<a href="#/people/timo-tiuraniemi">Timo Tiuraniemi</a>
+              <a href="/search/technology">technology</a> (8 verified notes)<br/>
+              &nbsp;&nbsp;&nbsp;<a href="/people/timo-tiuraniemi">Timo Tiuraniemi</a>
             </li>
             <li>
-              <a href="#/search/philosophy">philosophy</a> (5 verified notes)<br/>
-              &nbsp;&nbsp;&nbsp;<a href="#/people/lauri-jarvilehto">Lauri J&auml;rvilehto</a>
+              <a href="/search/philosophy">philosophy</a> (5 verified notes)<br/>
+              &nbsp;&nbsp;&nbsp;<a href="/people/lauri-jarvilehto">Lauri J&auml;rvilehto</a>
             </li>
             <li>
-              <a href="#/search/sports">sports</a> (2 verified notes)<br/>
-              &nbsp;&nbsp;&nbsp;<a href="#/people/antti-takalahti">Antti Takalahti</a>
+              <a href="/search/sports">sports</a> (2 verified notes)<br/>
+              &nbsp;&nbsp;&nbsp;<a href="/people/antti-takalahti">Antti Takalahti</a>
             </li>
           </ul>
         </p>
