--- a/frontend/core/src/main/webapp/static/partials/search.html
+++ b/frontend/core/src/main/webapp/static/partials/search.html
@@ -1,7 +1,7 @@
 <div class="span12">
   <!-- Page Content -->
   <div class="em-core">
-    <h3>extended mind <a href="#/" class="em-subtitle" ng-bind="page.getSubTitle()"></a></h3>
+    <h3>extended mind <a href="/" class="em-subtitle" ng-bind="page.getSubTitle()"></a></h3>
     <p>&nbsp;</p>
     <p>
       <form name="search">
@@ -12,7 +12,7 @@
           </dt>
           <dt>
             <br/>
-            <a href="#/" class="btn">search</a>
+            <a href="/" class="btn">search</a>
           </dt>
         </dl>
       </form>
