--- a/frontend/core/src/main/webapp/static/partials/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/tasks.html
@@ -1,5 +1,5 @@
 <div class="span12">
   <p>
-    <a href="#/my"><img src="static/partials/test/tasks.png"/></a>
+    <a href="/my"><img src="/static/partials/test/tasks.png"/></a>
   </p>
 </div>
