--- a/frontend/core/src/main/webapp/static/partials/test/pasta.html
+++ b/frontend/core/src/main/webapp/static/partials/test/pasta.html
@@ -3,9 +3,9 @@
   <div class="row-fluid">
     <div class="span8 em-note">
       <p><h3>Avocado pasta</h3>
-      &nbsp;&nbsp;&nbsp;<a href="#/categories#instruction">instruction</a> by <a href="#/people/antti-takalahti">Antti Takalahti</a>
+      &nbsp;&nbsp;&nbsp;<a href="/categories#instruction">instruction</a> by <a href="/people/antti-takalahti">Antti Takalahti</a>
       <br/>
-      &nbsp;&nbsp;&nbsp;<a href="#/search/recipe">recipe</a>, <a href="#/search/italian-cuisine">italian cuisine</a>, <a href="#/search/vegetarian">vegetarian</a>
+      &nbsp;&nbsp;&nbsp;<a href="/search/recipe">recipe</a>, <a href="/search/italian-cuisine">italian cuisine</a>, <a href="/search/vegetarian">vegetarian</a>
       </p>
       <p>
         <img src="http://ohsheglows.com/wp-content/uploads/2011/01/IMG_0191.jpg"/>
@@ -24,12 +24,12 @@
       </ul>
       </p>
       <p><b>Instructions</b></p>
-      <p>Slice the avocado in half, remove the core and spoon out the meat and place in a food 
-        processor or blender with half and half, cilantro, Parmesan cheese, lime juice and garlic 
+      <p>Slice the avocado in half, remove the core and spoon out the meat and place in a food
+        processor or blender with half and half, cilantro, Parmesan cheese, lime juice and garlic
         clove. Blend on high until creamy. Season with salt and pepper to taste.</p>
       <p>Toss with warm pasta and serve warm or chilled.</p>
        <p>&nbsp;</p>
-       <p><a href="#/">extended mind</a> | <a href="#/people/antti-takalahti">author</a> | <a href="#/">share</a></p>
+       <p><a href="/">extended mind</a> | <a href="/people/antti-takalahti">author</a> | <a href="/">share</a></p>
        <p>&nbsp;</p>
     </div>
   </div>
