Begun work on refactoring API to its own file

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -24,3 +24,7 @@ li.em-header {
 .em-anchor {
   padding-top: 30px;
 }
+/* Use this to get a "light" Helvetica Neue
+body {
+  font-weight: 300;
+}*/
