--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -11,12 +11,14 @@
 					<dt>
 						<label for="login-email">email address</label>
 						<!-- TODO: add attribute ng-model="email" -->
-						<input id="login-email" type="email" value="test@extendedmind.org" name="login-email"/>
+						<input type="text" name="userName" ng-model="user.name" required>
+						<!-- <input id="login-email" type="email" value="login.title" name="login-email"/> -->
 					</dt>
 					<dt>
 						<label for="login-password">password</label>
 						<!-- TODO: add attribute ng-model="password" -->
-						<input id="login-password" type="password" value="test" name="login-password"/>
+						<input type="text" name="password" ng-model="user.password" required>
+						<!-- <input id="login-password" type="password" value="test" name="login-password"/> -->
 					</dt>
 					<dt>
 						<a href="/my" class="btn">login</a>
