Started implementing factory services for http requests.

--- a/frontend/core/src/main/webapp/static/partials/home.html
+++ b/frontend/core/src/main/webapp/static/partials/home.html
@@ -12,8 +12,7 @@
 				<div id="em-verified-accordion" class="accordion">
 					<div class="accoardion-group">
 						<div class="accordion-heading">
-							<div class="accordion-toggle">
-								<a href=""> <h5>featured latest content</h5> </a>
+							<div class="accordion-toggle"><a href=""> <h5>featured latest content</h5> </a>
 								<h6>most interesting verified content this week</h6>
 							</div>
 						</div>
