Cleaned useless stuff.

--- a/frontend/core/src/main/webapp/static/partials/home.html
+++ b/frontend/core/src/main/webapp/static/partials/home.html
@@ -3,31 +3,7 @@
 	<div class="masthead">
 		<h3>extended mind</h3>
 		<p>
-			<a href="/about">about</a> | <a href="/login">login</a>
+			<a href="/tasks">tasks</a> | <a href="/notes">notes</a> | <a href="/login">login</a>
 		</p>
-	</div>
-	<div class="container-fluid">
-		<div class="row-fluid">
-			<div class="span12">
-				<div id="em-verified-accordion" class="accordion">
-					<div class="accoardion-group">
-						<div class="accordion-heading">
-							<div class="accordion-toggle"><a href=""> <h5>featured latest content</h5> </a>
-								<h6>most interesting verified content this week</h6>
-							</div>
-						</div>
-						<div class="accordion-body collapse in" id="em-verified-collapse">
-							<div class="accordion-inner">
-								<ul class="em-headers">
-									<li class="em-header" ng-repeat="content in latest">
-										{{content.title}}
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
 	</div>
 </div>
