--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -11,13 +11,13 @@
 					<dt>
 						<label for="login-email">email address</label>
 						<!-- TODO: add attribute ng-model="email" -->
-						<input type="text" name="userName" ng-model="user.name" required>
+						<input type="text" name="userName" ng-model="users[0].email" required>
 						<!-- <input id="login-email" type="email" value="login.title" name="login-email"/> -->
 					</dt>
 					<dt>
 						<label for="login-password">password</label>
 						<!-- TODO: add attribute ng-model="password" -->
-						<input type="text" name="password" ng-model="user.password" required>
+						<input type="text" name="password" required>
 						<!-- <input id="login-password" type="password" value="test" name="login-password"/> -->
 					</dt>
 					<dt>
