Correct path for json mock files in jasmine-jquery and jsonFixtures.js. Removed mockedLogin.js. Login unit tests.

--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -11,7 +11,7 @@
 					<dt>
 						<label for="login-email">email address</label>
 						<!-- TODO: add attribute ng-model="email" -->
-						<input type="text" name="userName" ng-model="users[0].email" required>
+						<input type="text" name="userName" required>
 						<!-- <input id="login-email" type="email" value="login.title" name="login-email"/> -->
 					</dt>
 					<dt>
