--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -10,19 +10,14 @@
 				<dl>
 					<dt>
 						<label for="login-email">email address</label>
-						<!-- TODO: add attribute ng-model="email" -->
-						<input type="text" name="userName" required>
-						<!-- <input id="login-email" type="email" value="login.title" name="login-email"/> -->
+						<input type="text" name="userName" ng-model="user.name" required>
 					</dt>
 					<dt>
 						<label for="login-password">password</label>
-						<!-- TODO: add attribute ng-model="password" -->
-						<input type="text" name="password" required>
-						<!-- <input id="login-password" type="password" value="test" name="login-password"/> -->
+						<input type="text" name="password" ng-model="user.pass" required>
 					</dt>
 					<dt>
-						<!-- <a href="/my" class="btn" ng-click="login()">login</a> -->
-						<button ng-click="userAuthenticate(users[0].email)">
+						<button ng-click="userAuthenticate(user.name)">
 							login
 						</button>
 					</dt>
