--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -10,16 +10,18 @@
 				<dl>
 					<dt>
 						<label for="login-email">email address</label>
-						<input type="text" name="userName" ng-model="user.name" required>
+						<input type="email" ng-model="login.userName" required>
 					</dt>
 					<dt>
 						<label for="login-password">password</label>
-						<input type="text" name="password" ng-model="user.pass" required>
+						<input type="text" ng-model="login.pass" required>
 					</dt>
 					<dt>
-						<button ng-click="userAuthenticate(user.name)">
+						<button ng-disabled="!login.$valid" ng-click="userAuthenticate(login.userName)">
 							login
 						</button>
+						remember
+						<input type="checkbox">
 					</dt>
 				</dl>
 			</form>
